// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package getway;

import "google/api/annotations.proto";

option go_package = "proto/getway";
option java_multiple_files = true;
option java_package = "io.grpc.examples.getway";
option java_outer_classname = "Getway";

service User {
  // login response
  rpc Login(LoginUserRequest) returns (LoginUserResponse) {
    option (google.api.http) = { 
      post: "/api/v1/user/login"
      body: "authData"
    };
  }

  // create response
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {
    option (google.api.http) = {
      post: "/api/v1/user/create"
      body: "*"
    };
  }

  // get response
  rpc RemoveUser(RemoveUserRequest) returns (RemoveUserResponse) {
    option (google.api.http) = {
      delete: "/api/v1/user/{id}"
    };
  }

  // get response
  rpc GetUser(GetUserRequest) returns (GetUserResponse) {
    option (google.api.http) = {
      get: "/api/v1/user"
    };
  }
}

// -------------------
// Userlogin
// -------------------
message LoginUserReqData {
  string authData = 1;
}

message LoginUserRequest {
  LoginUserReqData authData = 1;
}

message LoginUserResponse {
  string token = 1;
  string message = 2;
}

// -------------------
// User crete
// -------------------

message CreateUserRequest {
  string login = 1;
  string name = 2;
  string password = 3;
  string email = 4;
}

message CreateUserResponse {
  string message = 1;
}

// -------------------
// User remove
// -------------------

message RemoveUserRequest {
  string id = 1;
}

message RemoveUserResponse {
  string message = 1;
}

// -------------------
// User get
// -------------------

message GetUserRequest {}

message GetUserResponse {
  userData userData = 1;
  string message = 2;
}

message userData {
  string login = 1;
  string name = 2;
  string email = 3;
}